change title and add console log

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!--defer loads script after the body-->
 
 
-    <title>Class tracker</title>
+    <title>Class trackers</title>
 </head>
 
 <body class="master-container">
